_sass/layouts/blog/_post.scss
.post {
  .post-header {
    &.post-image {
      @include background-image;
      padding-top: 20rem;

      @include grid-media($mobile-only) {
        padding-top: 8rem;
      }
    }

    .post-header-bg {
      background-color: rgba(255, 255, 255, 0.65);

      .post-location {
        @include outer-container;

        p {
          @include column-margin;
          font-size: 0.75rem;
          padding: 0.25rem 0;
          text-align: right;
          text-transform: uppercase;
        }
      }
    }
  }

  .post-info {
    .meta {
      font-size: 0.875rem;

      &.meta-tags {
        @include column-margin;

        ul {
          margin-bottom: 1rem;
        }
      }

      &.meta-date {
        color: $gray;
      }
    }

    .post-excerpt {
      .post-excerpt__date--desktop {
        @include grid-column(3);
        display: block;

        @include grid-media($mobile-only) {
          display: none;
        }
      }

      .post-excerpt__date--mobile {
        @include grid-column(12);
        display: none;

        @include grid-media($mobile-only) {
          display: block;
          margin-bottom: 1rem;
        }
      }

      .post-excerpt__text {
        @include media-columns(12, 9);
      }
    }
  }

  .post-content {
    > p,
    > h1,
    > h2,
    > h3,
    > h4,
    > h5,
    > h6,
    > ul {
      @include outer-container;
      padding-left: map-get($neat-grid, gutter);
      padding-right: map-get($neat-grid, gutter);
    }

    .post-image,
    .post-map {
      margin-bottom: 3.5rem;
      margin-top: 3.5rem;

      @include grid-media($mobile-only) {
      margin-bottom: 2rem;
      margin-top: 2rem;
      }
    }

    ul {
      list-style-type: disc;
      padding-left: 2.5rem;

      ul {
        padding-left: 1.25rem;
      }
    }
  }

  .post-share {
    > * {
      @include grid-media($tablet) {
        @include column-margin;
      }
    }

    li {
      display: inline-block;
      padding-right: 1rem;

      @include grid-media($mobile-only) {
        @include grid-column(6);
        margin-bottom: 0.75rem;
      }

      i {
        font-size: 1.5rem;
        padding-right: 0.25rem;
        position: relative;
        top: 0.25rem;
      }

      &.twitter {
        > * {
          color: $twitter;
        }

        a:hover {
          border-bottom-color: $twitter;
        }
      }
      &.facebook {
        > * {
          color: $facebook;
        }

        a:hover {
          border-bottom-color: $facebook;
        }
      }
      &.google-plus {
        > * {
          color: $google-plus;
        }

        a:hover {
          border-bottom-color: $google-plus;
        }
      }
      &.xing {
        > * {
          color: $xing;
        }

        a:hover {
          border-bottom-color: $xing;
        }
      }
      &.linked-in {
        > * {
          color: $linked-in;
         }

        a:hover {
          border-bottom-color: $linked-in;
        }
      }
      &.mail {
        > * {
          color: $mail
        }

        a:hover {
          border-bottom-color: $mail;
        }
      }
    }
  }

  .post-info,
  .post-share {
    @include outer-container;

    > p,
    > h1,
    > h2,
    > h3,
    > h4,
    > h5,
    > h6 {
      @include column-margin;
    }
  }
}

